--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ a:hover {
     border: 1px solid #017bab;
     margin-bottom: 15px;
     padding: 11px 10px;
-    background: #777474;
+    background: #ffffff;
     font-size: 14px;
     font-weight: bold;
   }
