--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary: #111B54;
     --light: #ffffff;
-    --grey: #efefef;
+    --grey: #e2e2e2;
 }
 
 body {
@@ -84,10 +84,19 @@ a:hover {
     font-family: arial;
     background-image: url('bg.png');
   }
+
+  .encabezado{
+    margin: 0;
+    text-align: center;
+    height: 40px;
+    margin-bottom: 30px;
+    
+    font-size: 20px;
+  }
   
   .form-login {
     width: 400px;
-    height: 340px;
+    height: auto;
     background: #ff0000;
     margin: auto;
     margin-top: 180px;
@@ -120,6 +129,32 @@ a:hover {
     width: 100%;
     height: 40px;
     background: #017bab;
+    border: none;
+    color: white;
+    margin-bottom: 16px;
+  }
+  .btn {
+    width: 100%;
+    height: 40px;
+    background: #017bab;
+    border: none;
+    color: white;
+    margin-bottom: 16px;
+  }
+
+  .buttons2 {
+    width: 100%;
+    height: 40px;
+    background: #0189ab;
+    border: none;
+    color: white;
+    margin-bottom: 16px;
+  }
+
+  .buttons:hover {
+    width: 100%;
+    height: 40px;
+    background: #073d57;
     border: none;
     color: white;
     margin-bottom: 16px;
