--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ a:hover {
     margin-top: 180px;
     box-shadow: 7px 13px 37px #000;
     padding: 20px 30px;
-    border-top: 4px solid #017bab;
+    border-top: 4px solid #92ab01;
     color: white;
   }
   
@@ -154,7 +154,7 @@ a:hover {
   .buttons:hover {
     width: 100%;
     height: 40px;
-    background: #073d57;
+    background: #b7c2c7;
     border: none;
     color: white;
     margin-bottom: 16px;
